--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - 3002:3002
     environment:
       # 二选一
-      OPENAI_API_KEY:
+      OPENAI_API_KEY: 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
       # 二选一
       # OPENAI_ACCESS_TOKEN: xxx
       # API接口地址，可选，设置 OPENAI_API_KEY 时可用
